Fixes next and previous link text alignment

--- a/src/css/module/_nextprev.scss
+++ b/src/css/module/_nextprev.scss
@@ -34,6 +34,7 @@
   width: 100%;
   height: 100%;
   float: left;
+  text-align: center;
   position: relative;
   padding-top: modular-scale(0);
   padding-bottom: modular-scale(0);
